--- a/SimTECH/SimTECH/Pages/Racing/RaceWeek.razor
+++ b/SimTECH/SimTECH/Pages/Racing/RaceWeek.razor
@@ -101,7 +101,7 @@ else
                         <MudList>
                             <MudListItem>
                                 Country:
-                                <CountryFlag Code="@Model.Race.Track.Country" Size="FlagSize.Normal" IncludeName="true" />
+                                <CountryNamedFlag Code="@Model.Race.Track.Country" Size="FlagSize.Normal" />
                             </MudListItem>
                             <MudListItem>
                                 Length: @(Model.Race.Track.Length)Km
