--- a/SimTECH/SimTECH/Pages/Season/AddRaces.razor
+++ b/SimTECH/SimTECH/Pages/Season/AddRaces.razor
@@ -33,7 +33,7 @@
                             <MudText>@context.Name</MudText>
                         </MudTd>
                         <MudTd>
-                            <CountryFlag Code="@context.Country" Size="FlagSize.Small" IncludeName="true" />
+                            <CountryNamedFlag Code="@context.Country" Size="FlagSize.Small" />
                         </MudTd>
                         <MudTd>
                             <MudText Typo="Typo.caption">@(context.Length)Km</MudText>
