--- a/SimTECH/SimTECH/Pages/Season/Calendar.razor
+++ b/SimTECH/SimTECH/Pages/Season/Calendar.razor
@@ -36,7 +36,7 @@
                 <MudText>@context.Round</MudText>
             </MudTd>
             <MudTd>
-                <CountryFlag Code="context.Country" Size="FlagSize.Small" IncludeName="true" />
+                <CountryNamedFlag Code="context.Country" Size="FlagSize.Small" />
             </MudTd>
             <MudTd>
                 <MudText>@context.Name</MudText>
