--- a/SimTECH/SimTECH/Pages/Season/Overview.razor
+++ b/SimTECH/SimTECH/Pages/Season/Overview.razor
@@ -59,7 +59,7 @@
                                 {
                                     <MudText>Round @NextRace.Round - @NextRace.Name</MudText>
                                     <MudText>
-                                        <CountryFlag Code="NextRace.Track.Country" Size="FlagSize.Normal" IncludeName="true" />
+                                        <CountryNamedFlag Code="NextRace.Track.Country" Size="FlagSize.Normal" />
                                     </MudText>
 
                                     <MudButton Variant="Variant.Outlined" Color="Color.Tertiary" Size="Size.Small" Class="mt-auto" OnClick="GoToNextRace">Go to</MudButton>
