--- a/SimTECH/SimTECH/Pages/Season/SeasonTeams.razor
+++ b/SimTECH/SimTECH/Pages/Season/SeasonTeams.razor
@@ -19,7 +19,7 @@
             <PropertyColumn Property="e => e.Name" CellStyleFunc="@ViewHelper.TeamBorderRightStyleFunc" />
             <TemplateColumn T="SeasonTeam" SortBy="e => e.Team.Country" Title="Country">
                 <CellTemplate>
-                    <CountryFlag Code="@context.Item.Team.Country" Size="FlagSize.Small" IncludeName="true" />
+                    <CountryNamedFlag Code="@context.Item.Team.Country" Size="FlagSize.Small" />
                 </CellTemplate>
             </TemplateColumn>
             <PropertyColumn Property="e => e.Principal" CellClass="font-subtitle2" />
