--- a/SimTECH/SimTECH/Pages/Setup/Drivers.razor
+++ b/SimTECH/SimTECH/Pages/Setup/Drivers.razor
@@ -23,7 +23,7 @@
             <PropertyColumn Property="e => e.DateOfBirth" Title="DOB" Format="d" />
             <TemplateColumn T="Driver" Title="Nationality" SortBy="e => e.Country">
                 <CellTemplate>
-                    <CountryFlag Code="@context.Item.Country" Size="FlagSize.Small" IncludeName="true" />
+                    <CountryNamedFlag Code="@context.Item.Country" Size="FlagSize.Small" />
                 </CellTemplate>
             </TemplateColumn>
             <TemplateColumn T="Driver" Title="League" Sortable="false">
