--- a/SimTECH/SimTECH/Pages/Setup/HumanBeingGenerator.razor
+++ b/SimTECH/SimTECH/Pages/Setup/HumanBeingGenerator.razor
@@ -69,7 +69,7 @@
                                                 @foreach (var nationality in languageType)
                                                 {
                                                     <MudListItem>
-                                                        <CountryFlag Code="nationality.Country" Size="FlagSize.Small" IncludeName="true" />
+                                                        <CountryNamedFlag Code="nationality.Country" Size="FlagSize.Small" />
                                                     </MudListItem>
                                                 }
                                             </NestedList>
@@ -104,7 +104,7 @@
                         <MudTd>@context.Gender</MudTd>
                         <MudTd>@context.Dob.ToShortDateString()</MudTd>
                         <MudTd>
-                            <CountryFlag Code="@context.Nationality" Size="FlagSize.Small" IncludeName="true" />
+                            <CountryNamedFlag Code="@context.Nationality" Size="FlagSize.Small" />
                         </MudTd>
                     </RowTemplate>
                 </MudTable>
