--- a/SimTECH/SimTECH/Pages/Setup/Tracks.razor
+++ b/SimTECH/SimTECH/Pages/Setup/Tracks.razor
@@ -17,7 +17,7 @@
             <PropertyColumn Property="e => e.Name" />
             <TemplateColumn T="Track" Title="Country" SortBy="e => e.Country">
                 <CellTemplate>
-                    <CountryFlag Code="@context.Item.Country" Size="FlagSize.Small" IncludeName="true" />
+                    <CountryNamedFlag Code="@context.Item.Country" Size="FlagSize.Small" />
                 </CellTemplate>
             </TemplateColumn>
             <PropertyColumn Property="e => e.Length" Title="Length (Km)" />
