Attacking and defending has been implemented and it works!

--- a/SimTECH/SimTECH/Pages/Factors/IncidentEditor.razor
+++ b/SimTECH/SimTECH/Pages/Factors/IncidentEditor.razor
@@ -1,4 +1,6 @@
-﻿<MudDialog>
+﻿@using MudExtensions
+
+<MudDialog>
     <TitleContent>
         <MudText Typo="Typo.h5">Incident editor</MudText>
     </TitleContent>
