--- a/SimTECH/SimTECH/Pages/Season/AddEntrantsWizard.razor
+++ b/SimTECH/SimTECH/Pages/Season/AddEntrantsWizard.razor
@@ -1,5 +1,6 @@
 ﻿@page "/addentrantswizard/{SeasonId:long}"
 @using MudBlazor.Extensions
+@using MudExtensions
 @using MudExtensions.Enums;
 @using MudExtensions.Utilities
 
