--- a/SimTECH/SimTECH/Pages/Setup/DriverEditor.razor
+++ b/SimTECH/SimTECH/Pages/Setup/DriverEditor.razor
@@ -1,4 +1,6 @@
-﻿<MudDialog>
+﻿@using MudExtensions
+
+<MudDialog>
     <TitleContent>
         <MudText>
             <MudIcon Icon="@Icons.Material.Filled.Add" Class="mr-3 mb-n1" />
