--- a/SimTECH/SimTECH/Pages/Factors/ClimateEditor.razor
+++ b/SimTECH/SimTECH/Pages/Factors/ClimateEditor.razor
@@ -1,4 +1,6 @@
-﻿<MudDialog>
+﻿@using MudExtensions
+
+<MudDialog>
     <TitleContent>
         <MudText Typo="Typo.h5">Climate editor</MudText>
     </TitleContent>
