Previous changes, now merged

--- a/SimTECH/SimTECH/Pages/Racing/Practice.razor
+++ b/SimTECH/SimTECH/Pages/Racing/Practice.razor
@@ -78,7 +78,7 @@ else
                     <MudText Typo="Typo.caption">@context.MaxScore</MudText>
                 </MudTd>
                 <MudTd>
-                    <MudText>+@(context.TimedGap((highestScore - context.MaxScore), Model.GapMarge))</MudText>
+                    <MudText>+@(Math.Round((highestScore - context.MaxScore) * Model.GapMarge, 2))</MudText>
                 </MudTd>
             </RowTemplate>
         </MudTable>
