Overtaking by attacking and defending, it's here!

--- a/SimTECH/SimTECH/Pages/Racing/Race.razor
+++ b/SimTECH/SimTECH/Pages/Racing/Race.razor
@@ -64,6 +64,7 @@
                 <col style="width: 30px" />
                 <col style="width: 220px" />
                 <col style="width: 30px" />
+                <col style="width: 75px" />
                 <col style="width: 50px" />
                 <col style="width: 30px" />
                 <col style="width: 50px" />
@@ -77,6 +78,7 @@
                 <MudTh Class="number-col">No</MudTh>
                 <MudTh>Team</MudTh>
                 <MudTh Class="number-col">PWR</MudTh>
+                <MudTh>ATT/DEF</MudTh>
                 <MudTh Class="number-col-lg">TYRE</MudTh>
                 <MudTh Class="number-col">Score</MudTh>
                 <MudTh Class="number-col-lg">Status</MudTh>
@@ -112,6 +114,15 @@
                 </MudTd>
                 <MudTd Class="number-col">
                     <MudText Typo="Typo.caption">@context.Power</MudText>
+                </MudTd>
+                <MudTd>
+                    <MudStack Row="true" Justify="Justify.Center" AlignItems="AlignItems.Center" Class="mud-width-full">
+                        <MudIcon Icon="@IconCollection.Sword" Size="Size.Small" />
+                        <MudText Typo="Typo.caption">@context.Attack</MudText>
+                        <MudDivider Vertical="true" />
+                        <MudText Typo="Typo.caption">@context.ModifiedDefense(Model.DefenseMod)</MudText>
+                        <MudIcon Icon="@IconCollection.ShieldChevron" Size="Size.Small" />
+                    </MudStack>
                 </MudTd>
                 <MudTd Class="number-col-lg">
                     <TyreElement Colour="@context.CurrentTyre.Colour">@context.TyreLife</TyreElement>
@@ -468,9 +479,6 @@
     {
         var racingDrivers = Model.RaceDrivers.OrderBy(e => (int)e.Status).ThenByDescending(e => e.LapSum).ToList();
 
-        int tempCommonDefense = 250;
-        int tempCommonAttack = 15;
-
         int positionIndex = 0;
         foreach (var driver in racingDrivers)
         {
@@ -489,7 +497,7 @@
                 if (!aboveDriver.InstantOvertaken)
                 {
                     // Should actually be: defense of above driver and attack of attacking driver
-                    var battleCost = tempCommonDefense - tempCommonAttack;
+                    var battleCost = aboveDriver.ModifiedDefense(Model.DefenseMod) - driver.Attack;
                     if (battleCost > 0)
                         lastScore.Score -= battleCost;
 
