--- a/SimTECH/SimTECH/Pages/Racing/RaceWeek.razor
+++ b/SimTECH/SimTECH/Pages/Racing/RaceWeek.razor
@@ -110,16 +110,19 @@ else
                                 Laps: @(NumberHelper.CalcLapCount(Model.Race.RaceLength, Model.Race.Track.Length))
                             </MudListItem>
                             <MudListItem>
-                                <MudText>Aero mod: @Model.Race.Track.AeroMod</MudText>
+                                <MudText>Aero modifier: @Model.Race.Track.AeroMod</MudText>
                             </MudListItem>
                             <MudListItem>
-                                Chassis mod: @Model.Race.Track.ChassisMod
+                                Chassis modifier: @Model.Race.Track.ChassisMod
                             </MudListItem>
                             <MudListItem>
-                                Power mod: @Model.Race.Track.PowerMod
+                                Powertrain modifier: @Model.Race.Track.PowerMod
                             </MudListItem>
                             <MudListItem>
-                                Qualy mod: @Model.Race.Track.QualifyingMod
+                                Qualifying modifier: @Model.Race.Track.QualifyingMod
+                            </MudListItem>
+                            <MudListItem>
+                                Defense modifier: @Model.Race.Track.DefenseMod
                             </MudListItem>
                             <MudListItem>
                                 Weather: @Model.Race.Climate.Terminology
