--- a/SimTECH/SimTECH/Pages/Setup/TrackEditor.razor
+++ b/SimTECH/SimTECH/Pages/Setup/TrackEditor.razor
@@ -25,6 +25,7 @@
                             <MudNumericField T="double" @bind-Value="model.ChassisMod" Label="Chassis mod" Format="N2" Class="field-sm" />
                             <MudNumericField T="double" @bind-Value="model.PowerMod" Label="Power mod" Format="N2" Class="field-sm" />
                             <MudNumericField T="double" @bind-Value="model.QualifyingMod" Label="Qualy mod" Format="N2" Class="field-sm" />
+                            <MudNumericField T="double" @bind-Value="model.DefenseMod" Label="Defense mod" Format="N2" Class="field-sm" />
                         </MudStack>
                     </MudPaper>
                 </MudItem>
