--- a/SimTECH/SimTECH/Pages/Setup/Tracks.razor
+++ b/SimTECH/SimTECH/Pages/Setup/Tracks.razor
@@ -41,6 +41,11 @@
                     <MudText Typo="Typo.caption">@(context.Item.QualifyingMod)x</MudText>
                 </CellTemplate>
             </TemplateColumn>
+            <TemplateColumn T="Track" Title="Defense">
+                <CellTemplate>
+                    <MudText Typo="Typo.caption">@(context.Item.DefenseMod)x</MudText>
+                </CellTemplate>
+            </TemplateColumn>
             <TemplateColumn T="Track">
                 <CellTemplate>
                     <MudButtonGroup>
