--- a/SimTECH/SimTECH/Pages/Season/SeasonDrivers.razor
+++ b/SimTECH/SimTECH/Pages/Season/SeasonDrivers.razor
@@ -27,6 +27,8 @@
             <PropertyColumn Property="e => e.Number" SortBy="e => e.Number" Title="No." HeaderClass="number-col hide-sort-icons" CellClass="number-col" CellStyleFunc="@ViewHelper.DriverTeamStyleFunc" />
             <PropertyColumn Property="e => e.Skill" />
             <PropertyColumn Property="e => e.Reliability" Title="Rel." />
+            <PropertyColumn Property="e => e.Attack" Title="Attack" />
+            <PropertyColumn Property="e => e.Defense" Title="Defense" />
             <PropertyColumn Property="e => e.TeamRole" Title="Role" />
             <TemplateColumn T="SeasonDriver" Title="Team">
                 <CellTemplate>
