--- a/SimTECH/SimTECH/Pages/Setup/TraitEditor.razor
+++ b/SimTECH/SimTECH/Pages/Setup/TraitEditor.razor
@@ -36,6 +36,8 @@
                 <MudItem xs="3">
                     <MudNumericField T="int" @bind-Value="model.QualifyingPace" Label="QualifyingPace" />
                     <MudNumericField T="int" @bind-Value="model.RacePace" Label="RacePace" />
+                    <MudNumericField T="int" @bind-Value="model.Attack" Label="Attack" />
+                    <MudNumericField T="int" @bind-Value="model.Defense" Label="Defense" />
                 </MudItem>
                 <MudItem xs="3">
                     <MudNumericField T="int" @bind-Value="model.DriverReliability" Label="DriverReliability" />
