--- a/SimTECH/SimTECH/Components/BadgeWrapper.razor.css
+++ b/SimTECH/SimTECH/Components/BadgeWrapper.razor.css
@@ -1,27 +1,14 @@
-﻿.lil-fucko {
-    margin-left: 5px;
-}
-
-.top-right {
-    inset: auto auto calc(100% - 4px) calc(100% - 4px);
-}
-
-.dot {
+﻿.dot {
     border-radius: 50%;
     height: 9px;
-    min-width: 0;
+    min-width: 9px;
     padding: 0;
     width: 9px;
 }
 
 .badger {
-    border-radius: 10px;
     font-size: 12px;
-    height: 20px;
     letter-spacing: 0;
-    min-width: 20px;
-    padding: 4px 6px;
-    pointer-events: auto;
     line-height: 1;
     position: absolute;
     text-align: center;
@@ -29,4 +16,11 @@
     top: auto;
     transition: .3s cubic-bezier(.25,.8,.5,1);
     white-space: nowrap;
+}
+
+.thrown-away {
+    border-radius: 10px;
+    height: 20px;
+    min-width: 20px;
+    padding: 4px 6px;
 }
