--- a/SimTECH/SimTECH/Pages/Racing/Race.razor
+++ b/SimTECH/SimTECH/Pages/Racing/Race.razor
@@ -79,7 +79,7 @@
                 <MudTh>Team</MudTh>
                 <MudTh Class="number-col">PWR</MudTh>
                 <MudTh>ATT/DEF</MudTh>
-                <MudTh Class="number-col-lg">TYRE</MudTh>
+                <MudTh Class="tyre-col">TYRE</MudTh>
                 <MudTh Class="number-col">Score</MudTh>
                 <MudTh Class="number-col-lg">Status</MudTh>
                 <MudTh>Progression</MudTh>
@@ -124,9 +124,9 @@
                         <MudIcon Icon="@IconCollection.ShieldChevron" Size="Size.Small" />
                     </MudStack>
                 </MudTd>
-                <MudTd Class="number-col-lg">
+                <MudTd Class="tyre-col">
                     <TyreElement Colour="@context.CurrentTyre.Colour">@context.TyreLife</TyreElement>
-                    @*<BadgeWrapper Colours="@(context.Strategy.StrategyTyres.Select(e => e.Tyre.Colour).ToArray())" />*@
+                    <BadgeWrapper Colours="@(context.Strategy.StrategyTyres.Select(e => e.Tyre.Colour).ToArray())" />
                 </MudTd>
                 <MudTd Class="number-col">
                     <MudText Typo="Typo.caption">@context.LapSum</MudText>
