--- a/SimTECH/SimTECH/wwwroot/css/site.css
+++ b/SimTECH/SimTECH/wwwroot/css/site.css
@@ -76,8 +76,13 @@ th {
     border-radius: 50%;
     text-align: center;
     font-size: 0.9em;
-    font-family: F1Bold;
+    font-family: NovaBlack;
     line-height: 1.15;
+}
+
+.tyre-col {
+    width: 50px;
+    padding: 4px;
 }
 
 .number-col {
