Working on a few changes to races and etc

--- a/SimTECH/SimTECH/Pages/Racing/PostRace.razor
+++ b/SimTECH/SimTECH/Pages/Racing/PostRace.razor
@@ -81,11 +81,11 @@
             <MudPaper Class="mud-height-full">
                 <MudStack Spacing="6">
                     <DriverGraphic FirstName="Mr." LastName="Mister" Abbreviation="MIS" Number="77"
-                               Team="Racing Team" Colour="@Color.Secondary.ToString()" Position="3" />
+                               Team="Racing Team" Colour="red" Position="3" />
                     <DriverGraphic FirstName="Dr." LastName="Bloke" Abbreviation="BLO" Number="33"
-                               Team="Racing Team" Colour="@Color.Primary.ToString()" Position="1" />
+                               Team="Racing Team" Colour="blue" Position="1" Eliminated="true" />
                     <DriverGraphic FirstName="Ms." LastName="Lady" Abbreviation="LAD" Number="55"
-                               Team="Racing Team" Colour="@Color.Tertiary.ToString()" Position="2" />
+                               Team="Racing Team" Colour="green" Position="2" />
                 </MudStack>
             </MudPaper>
         </MudItem>
