--- a/SimTECH/SimTECH/Pages/Racing/Race.razor
+++ b/SimTECH/SimTECH/Pages/Racing/Race.razor
@@ -341,8 +341,7 @@
 
                 }
 
-                driver.LapScores.Add(lapScore);//comment out when implementing att/def.. maybe!
-                driver.LastScore = lapScore;
+                driver.LapScores.Add(lapScore);
                 lapScoresToPersist.Add(lapScore);
             }
 
@@ -502,7 +501,6 @@
                     if (battleCost > 0)
                         lastScore.Score -= battleCost;
 
-                    // check quickly here if lapsum is the same as lapsumwithlast
                     if (aboveDriver.LapSum > driver.LapSum)
                     {
                         // Overtake failed
