--- a/SimTECH/SimTECH/Pages/Setup/Drivers.razor
+++ b/SimTECH/SimTECH/Pages/Setup/Drivers.razor
@@ -19,9 +19,9 @@
         <Columns>
             <HierarchyColumn T="Driver" />
             <PropertyColumn Property="e => e.FullName" Title="Name" />
-            <PropertyColumn Property="e => e.Abbreviation" />
+            <PropertyColumn Property="e => e.Abbreviation" Title="Tag" />
             <PropertyColumn Property="e => e.DateOfBirth" Title="DOB" Format="d" />
-            <TemplateColumn T="Driver" Title="Nationality" SortBy="e => e.Country">
+            <TemplateColumn T="Driver" Title="Nation" SortBy="e => e.Country">
                 <CellTemplate>
                     <CountryNamedFlag Code="@context.Item.Country" Size="FlagSize.Small" />
                 </CellTemplate>
